--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^7.0.0",
     "nuxt": "^4.2.2",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
