--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "war-drafting-simulator",
   "type": "module",
   "private": true,
+  "main": "dist-electron/main.js",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -17,5 +18,12 @@
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "vue-toastification": "^2.0.0-rc.5"
+  },
+  "devDependencies": {
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
+    "nuxt-electron": "^0.7.0",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6"
   }
 }
