chore: switch submodules from SSH to HTTPS for Vercel

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "public/cards"]
 	path = public/cards
-	url = git@github.com:srcmax-studio/wds-characters-images.git
+	url = https://github.com/srcmax-studio/wds-characters-images.git
 	branch = webp
 [submodule "app/common"]
 	path = app/common
-	url = git@github.com:srcmax-studio/war-drafting-simulator-common.git
+	url = https://github.com/srcmax-studio/war-drafting-simulator-common.git
